--- a/assesment.grad001.arnoldmasutha/src/main/resources/application.properties
+++ b/assesment.grad001.arnoldmasutha/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+#connecting the database file
+
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
